# hello_cmake

./: CMakeLists.txt  README.md  main.cpp
examples/: CMakeLists.txt  example1.cpp  example2.cpp  example3.cpp
include/: CMakeLists.txt
include/hellocmake/: helloworld.hpp
src/: CMakeLists.txt  helloworld.cpp
tests/: CMakeLists.txt  test1.cpp  test2.cpp
